Fix sidebar spacing

--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 /*TODO
-Fixa padding på botten
 Fixa sidebar*/
 
 
@@ -19,7 +18,8 @@ body{
 
 .sidebar{
     display: grid;
-    grid-template-columns: 1fr, 4fr;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 1fr 4fr 4fr;
     grid-column: 1;
     grid-row: 1 / 3;
     background-color: rgb(67, 76, 156);
@@ -28,8 +28,8 @@ body{
 .sidebar h2{
     font-size: 20;
     grid-column: 2;
+    padding-top: 20px;
     font-family: 'Courier New', Courier, monospace;
-    gap: 15px;
 }
 
 .sidebar ul{
@@ -37,7 +37,7 @@ body{
     grid-column: 2;
     display: grid;
     padding: 0;
-    gap: 10px;
+    gap: 5px;
 }
 
 
